force-app/main/default/objects/Payment__c/fields/Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Name__c</fullName>
    <description>Card name for payment record</description>
    <label>Card Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>