force-app/main/default/objects/Payment__c/fields/CashSum__c.field-meta.xml
<CustomField>
    <fullName>CashSum__c</fullName>
    <description>Cash sum for payment record</description>
    <label>Cash Sum</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>