force-app/main/default/objects/Payment__c/fields/Doc_Date__c.field-meta.xml
<CustomField>
    <fullName>Doc_Date__c</fullName>
    <label>Doc Date</label>
    <type>Date</type>
</CustomField>