force-app/main/default/objects/Payment__c/fields/Doc_Num__c.field-meta.xml
<CustomField>
    <fullName>Doc_Num__c</fullName>
    <label>Doc Num</label>
    <length>100</length>
    <type>Text</type>
</CustomField>