force-app/main/default/objects/Payment__c/fields/Invoice_Entry__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Entry__c</fullName>
    <label>Invoice Entry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>