force-app/main/default/objects/Payment__c/fields/JournalRemarks__c.field-meta.xml
<CustomField>
    <fullName>JournalRemarks__c</fullName>
    <description>Journal remarks for payment record</description>
    <label>Journal Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>