force-app/main/default/objects/Payment__c/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <displayFormat>MG-RCP-2026-{000000}</displayFormat>
    <label>Receipt Number</label>
    <type>AutoNumber</type>
</CustomField>