force-app/main/default/objects/Payment__c/fields/Receipt_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Numbers__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , Receipt_Number__c)</formula>
    <label>Receipt Number</label>
    <type>Text</type>
</CustomField>