force-app/main/default/objects/Payment__c/fields/TransferSum__c.field-meta.xml
<CustomField>
    <fullName>TransferSum__c</fullName>
    <description>Transfer sum for payment record</description>
    <label>Transfer Sum</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>