force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Receipt_Numbers__c</columns>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>